# qwen-edit-service

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
clients/python/: qwen_edit_client.py
clients/typescript/: README.md  package.json  qwenEdit.ts
deploy/: _remote_restart.sh  download_fp8_comfyui.sh  download_lora.sh  download_model.sh  setup_env.sh  ssh_tunnel.ps1
server/: loader.py  qwen_edit_server.py  run_server.sh
tests/: regenerate_pipeline_demo.py  smoke_test.py
